--- a/templates/booking/checkout.html
+++ b/templates/booking/checkout.html
@@ -164,7 +164,7 @@
                                     {%if total != 0 %}
                                     <td>
 
-                                        <button type="submit" name="submit" class="btn btn-primary btn-block">Prenota. </button>
+                                        <button type="submit" name="submit" class="btn btn-primary btn-block" data-toggle="tooltip" data-html="true" title="Attenzione: procedura lunga attendere il cambio pagina dopo aver premuto il pulsante [Prenota]">Prenota. </button>
                                     </td>
                                     <td>
 
