--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 <meta http-equiv="cache-control" content="max-age=604800" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>LTCBoxOffice | Piattaforma prevendita biglietti</title>
+<title>LTCBoxOffice | Piattaforma prenotazione posti.</title>
 
 <style type="text/css" media="screen">
 
