--- a/templates/includes/boxoffice_footer.html
+++ b/templates/includes/boxoffice_footer.html
@@ -5,7 +5,7 @@
 	<div class="container">
 		<section class="footer-bottom border-top row">
 			<div class="col-md-2">
-				<p class="text-muted"> &copy 2023 Laboratorio Teatrale di Cambiano</p>
+				<p class="text-muted"> &copy 2024 Laboratorio Teatrale di Cambiano A.P.S.</p>
 			</div>
 			<div class="col-md-8 text-md-center">
 				<span  class="px-2">info@teatrocambiano.com</span>
