Rifinita prima pagina in assenza spettacoli

--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -91,7 +91,13 @@
         {%else%}
         <h2>
             <span class="badge bg-secondary text-white">
-                Nessun risultato trovato nella ricerca usando la parola '{{keyword}}'.
+                <p>
+                    Nessun spettacolo della corrente stagione è stato inserito nella sezione '{{keyword}}'.
+                </p>
+                <p>
+                    Se ritieni che questo sia un errore contatta via mail il BoxOffice.
+                </p>
+
             </span>
         </h2>
         {%endif%}
