refined welcome pag with no show - seasonal context added

--- a/templates/home_noshow.html
+++ b/templates/home_noshow.html
@@ -27,7 +27,31 @@
     {{message}}
 	
 </div> <!-- row.// -->
+	
+<div class="row">
+	<div class="col-sm-6" >
+		<H1>
+			Ti manchiamo?
+		</H1>
+		<p class="">
+			Se proprio hai tanta nostalgia del nostro teatro, prova a visitare il nostro canale Youtube.
+		</p>
+			<a href="https://www.youtube.com/channel/UCBtMPZAXfecZHMNr0N0T0vg">
+			<img class="img-responsive" src="static/images/Logo_of_YouTube_(2015-2017).svg.png" style="">
+			<h4>Canale YouTube del Laboratorio Teatrale di Cambiano A.P.S.</h4>
+			</a>
+		</div>
+		<div class="col-sm-6">
+			{%if season == 'Estate'%}
+			<img class="img-responsive" src="static/images/summer_welcome.png" width="400px" height="auto" >
+			{%else %}
+			<img class="img-responsive" src="static/images/winter_workinprogress.png" width="400px" height="auto" >
+			{%endif%}
 
+
+		</div>
+			
+</div> <!-- row.// -->
 </div><!-- container // -->
 </section>
 <!-- ========================= SECTION  END// ========================= -->
