creata la pagina di approdo per sito web principale - modificata la mialbox

--- a/templates/booking/booking_complete.html
+++ b/templates/booking/booking_complete.html
@@ -86,6 +86,7 @@
                                                 <td >
                                                     {% autoescape off %}
                                                     <img src="{% static 'images/'%}{{orderevent.barcode}}" alt="Tickets booking barcode" style="max-height: 100px;" class="center">
+                                                    <!-- <img src="{{orderevent.barcode_path}}" alt="Tickets booking barcode" style="max-height: 100px;" class="center"> -->
                                                     {% endautoescape %}
                                                 </td>
                                             </tr>
