--- a/templates/store/show_detail.html
+++ b/templates/store/show_detail.html
@@ -55,7 +55,7 @@
 				</td>
 			  {%else%}
 			  <td>
-					  <a href="{{event.event_slug}}" class="btn btn-outline-primary">
+					  <a href="{{next_url}}{{event.event_slug}}" class="btn btn-outline-primary">
 						<span class="text-center">
 							{{event.date_time|date:"D d m Y"}}
 							<br>
