--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -18,7 +18,14 @@
     
     <div class="card mx-auto" style="max-width: 512px; margin-top:100px;">
           <div class="card-body">
-          <h4 class="card-title mb-4">Login</h4><h5>fornisci le tue credenziali di accesso</h5>
+          <h4 class="card-title mb-4">Login</h4>
+          <h5>fornisci le tue credenziali di accesso</h5>
+          <h6><B>Il nuovo sito richiede una nuova validazione del tuo utente.</B></h6>
+          <p><small>Controlla la mail che hai usato per la registrazione sul vecchio sito di prenotazioni. Agli utenti che hanno usato il sito nel 2023 o 2024 
+            è stata inviata una mail con le istruzioni per riattivare l'utenza.<BR> La mail è stata spedita da LTCBoxOffice@teatrocambiano.com. 
+              Se non hai ricevuto nessuna e-mail dovrai registrarti nuovamente.<BR> 
+              In caso persistano problemi contattaci alla mail </small></p>
+              <p><small><a href="mailto:LTCBoxOffice@teatrocambiano.com">LTCBoxOffice@teatrocambiano.com</a></small></p>
           {%include 'includes/alerts.html'%}
           <form action="{%url 'login'%}" method="POST">
             {%csrf_token%}
