--- a/templates/accounts/resetPassword.html
+++ b/templates/accounts/resetPassword.html
@@ -10,7 +10,7 @@
     <div class="card mx-auto" style="max-width: 512px; margin-top:100px;">
           <div class="card-body">
           <h4 class="card-title mb-4">Reset della password</h4>
-          {%include 'includes/alert.html'%}
+          {%include 'includes/alerts.html'%}
           <form action="{%url 'resetPassword'%}" method="POST">
             {%csrf_token%}
             <div class="form-group">
